--- a/wp-content/themes/daddytales/package.json
+++ b/wp-content/themes/daddytales/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "body-scroll-lock": "^3.1.5",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "object-fit-images": "^3.2.4",
     "slick-carousel": "^1.8.1"
   },
